[package]
name = "protodem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
prost = "0.12.3"
thiserror = "1.0.58"

[build-dependencies]
anyhow = "1.0.81"
prost-build = "0.12.3"
thiserror = "1.0.58"
